--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,51 @@
 ---
-title: Welcome to Middleman
+title: Team Picker
 ---
 
-<div class="header">
-  Team Picker
+<div class="container">
+  <div class="row align-center mvl">
+    <div class="grid-2">
+      <button class="left btn-control" on-tap="subtractPeople()">
+        <img src="../images/minus.png">
+      </button>
+    </div>
+    <div class="grid-8">
+      <!-- There are -->
+      <div class="h2">
+        4
+      </div>
+      <div class="h3">
+        people
+      </div>
+    </div>
+    <div class="grid-2">
+      <button class="right btn-control" on-tap="addPeople()">
+        <img src="../images/plus.png">
+      </button>
+    </div>
+  </div>
+  <div class="row align-center mvl">
+    <div class="grid-2">
+      <button class="left btn-control" on-tap="subtractTeams()">
+        <img src="../images/minus.png">
+      </button>
+    </div>
+    <div class="grid-8">
+      <!-- I want -->
+      <div class="h2">
+        2
+      </div>
+      <div class="h3">
+        teams
+      </div>
+    </div>
+    <div class="grid-2">
+      <button class="right btn-control" on-tap="addTeams()">
+        <img src="../images/plus.png">
+      </button>
+    </div>
+  </div>
+  <button class="btn btn-full mtm">
+    Start Picking
+  </button>
 </div>
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
