--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,11 @@
   </head>
   
   <body class="<%= page_classes %>">
+    <header class="header">
+      <h1 class="header-logo">
+        Team Picker
+      </h1>
+    </header>
     <%= yield %>
   </body>
 </html>
